fix overflow

--- a/index.css
+++ b/index.css
@@ -50,7 +50,6 @@ body {
 }
 
 .head .nav ul li {
-  margin-left: 15%;
   line-height: 8vh;
   font-size: 1.5em;
 }
